@@ -1,3 +1,9 @@
+2008-11-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	* gdb.texinfo (Symbols): Mention printing containing
+	image name in "info symbol".
+	(Maint translate-address): Likewise.
+	
 2008-11-18  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.texinfo (Set Catchpoints): Remove the documentation of
